fixed mobile section stretch bug for most browsers

--- a/src/pages/CultureShowPage.css
+++ b/src/pages/CultureShowPage.css
@@ -106,7 +106,8 @@
 #cs-page-hero-section {
     position: relative;
     width: 100%;
-    height: 87dvh;
+    height: calc(100vh - 5rem);
+    height: calc(100svh - 5rem);
 }
 
 #cs-page-hero-img {
